--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ToDo App</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
     <body>
         <div class="container">
             <header>
-                <h1>Add to Your List</h1>
+                <h1>to-Do</h1>
             </header>
             <section>
                 <form class="toDoForm">
                     <input type="text" name="todo" id="toDoInput" placeholder="Type to add to your list..."
                         aria-label="Enter todo item to add" required>
-                    <button class="btn" type="submit">Add</button>
+                    <button class="btn" type="submit">➕</button>
                 </form>
             </section>
             <ul class="toDoList"></ul>
         </div>
-
 
         <script type="module" src="todo.js"></script>
         <script type="module" src="main.js"></script>
