ADD: Brand, profile links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,25 @@
             </section>
             <ul class="toDoList"></ul>
         </div>
-
+        <footer>
+            <ul>
+                <li>
+                    <a href="https://github.com/adiMallya" target="_blank">
+                        <img class="icon" src="./assets/github.svg" alt="github" />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/adithya-mallya-54438417a/" target="_blank">
+                        <img class="icon" src="./assets/linkedin-round-line.svg" alt="linkedin" />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://x.com/mallyaAdi" target="_blank">
+                        <img class="icon" src="./assets/twitter-round.svg" alt="twitter" />
+                    </a>
+                </li>
+            </ul>
+        </footer>
         <script type="module" src="todo.js"></script>
         <script type="module" src="main.js"></script>
     </body>
