FEAT: Add dates to your tasks, display tasks grouped by date

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <form class="toDoForm">
                     <input type="text" name="todo" id="toDoInput" placeholder="Type to add to your list..."
                         aria-label="Enter todo item to add" required>
+                    <input type="date" name="" id="toDoDate" aria-label="Enter the date for the task" required>
                     <button class="btn" type="submit">➕</button>
                 </form>
             </section>
@@ -41,7 +42,8 @@
                 </li>
             </ul>
         </footer>
-        <script type="module" src="todo.js"></script>
+        <!-- <script type="module" src="todo.js"></script> -->
+        <!-- <script type="module" src="utils.js"></script> -->
         <script type="module" src="main.js"></script>
     </body>
 
